--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Compilation
-      uses: vinay0410/tectonic-action@master
+      uses: vinay0410/tectonic-action@add/input
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tex_path: 'resume/myResume.xtx'
+        push: 'no'
