--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tex_path: 'resume2/myResume.xtx'
+          tex_path: 'resume2/myResume.tex'
           push: 'yes'
